cmake_minimum_required(VERSION 3.8)
project(trajectory_tracker)

if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(Eigen3 REQUIRED)

include_directories(include ${EIGEN3_INCLUDE_DIRS})

# 算法库：LQR, Pure Pursuit, MPC
add_library(${PROJECT_NAME}_lib SHARED
  src/algorithms/lqr_controller.cpp
  src/algorithms/pure_pursuit_controller.cpp
  src/algorithms/mpc_controller.cpp
)
ament_target_dependencies(${PROJECT_NAME}_lib rclcpp nav_msgs geometry_msgs std_msgs tf2 tf2_ros tf2_geometry_msgs)
target_link_libraries(${PROJECT_NAME}_lib Eigen3::Eigen)

add_executable(tracker_node src/tracker_node.cpp)
ament_target_dependencies(tracker_node rclcpp nav_msgs geometry_msgs std_msgs tf2 tf2_ros tf2_geometry_msgs)
target_link_libraries(tracker_node ${PROJECT_NAME}_lib)

install(TARGETS ${PROJECT_NAME}_lib
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION lib
)
install(TARGETS tracker_node DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY include/ DESTINATION include/)
install(DIRECTORY params launch DESTINATION share/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_include_directories(include)
ament_export_libraries(${PROJECT_NAME}_lib)
ament_export_dependencies(rclcpp nav_msgs geometry_msgs std_msgs tf2 tf2_geometry_msgs Eigen3)
ament_package()
